@@ -64,3 +64,13 @@
     defined: fs20, fht, ks300_1, ks300_2
   - links in the commandref.html file added
   - device dependent attribute and set support
+
+- Pest, Sun Apr 08 17:55:15 MEST 2007
+  em1010.pl:
+  - Make difference between sensors 1..4 and 5..
+  - Checked values for sensor 5 (cur.energy + cur.power) - ok
+  - Checked values for sensor 5 cur.energy is ok, cur.power still off.
+    Correction factor needs to be determined.
+  - setTime: Without argument, now the current time of the PC is used.
+  - setRperKW: Factor of 10 required, 75 U/kWh -> 750.
+
